cleanup/formatting